<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="ntpu_dmcl.ntpu_guide.MainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/navigationMap" >

        </WebView>


    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/mian_drawer_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toSchool"
                android:id="@+id/drawer_toSchool"
                android:background="@drawable/drawer_button"
                style="@style/ButtonText"
                />

            <Button
                android:id="@+id/drawer_notice"
                style="@style/ButtonNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/drawer_button"
                android:text="@string/notice" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">



            <Button
                android:id="@+id/teach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teach"
                android:textSize="17sp"
                android:background="@drawable/drawer_teach_list"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin"
                android:textSize="17sp"
                android:background="@drawable/drawer_admin_list"
                android:layout_weight="1"/>




        </TableRow>

        <ExpandableListView
            android:id="@+id/main_leftList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/drawer_teach_list"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp" />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>